--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-         <script type="text/javascript" src="js/scatterplot.js"></script>
+         <script type="text/javascript" src="js/scales.js"></script>
 
     </body>
     
